--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,9 +8,13 @@
   }
  ],
  "routes": [
-  {
-   "src": "/(.*)",
-   "dest": "app.js"
-  }
- ]
+    {
+      "src": "/(.*)",
+      "dest": "./app.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    }
+  ]
 }
