--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,17 +3,14 @@
  "builds": [
   {
    "src": "app.js",
-   "use": "@vercel/node"
+   "use": "@vercel/node",
+   "config": { "includeFiles": ["dist/**"] }
   }
  ],
  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
-    }
-  ]
+  {
+   "src": "/(.*)",
+   "dest": "app.js"
+  }
+ ]
 }
